--- a/tariffs.black.html
+++ b/tariffs.black.html
@@ -19,12 +19,9 @@
 
 <header class="header-bottom">
     <div class="container">
-        <div class="logo">Pinup Casino</div>
         <nav class="menu">
             <ul>
-                <li><a href="index.html">Ana Sayfa</a></li>
-                <li><a href="index.html#menu">Menü</a></li>
-                <li><a href="index.html#contact">Kişiler</a></li>
+                <li><a href="index.html">Pinup Casino</a></li>
             </ul>
         </nav>
     </div>
