--- a/tariffs.black.html
+++ b/tariffs.black.html
@@ -21,7 +21,7 @@
     <div class="container">
         <nav class="menu">
             <ul>
-                <li><a href="index.html">Pinup Casino</a></li>
+                <li>Pinup Casino</li>
             </ul>
         </nav>
     </div>
